--- a/public/css/usuarios.css
+++ b/public/css/usuarios.css
@@ -24,6 +24,21 @@ body{
     top: 20%;
 }
 
+.contenedor{
+    height: fit-content;
+    width: 532px;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    scale: 200%;
+    position: absolute;
+    left: 15%;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+     justify-content: flex-end;
+     align-items: flex-end;
+}
 .opcionesUsuarios{
     display: flex;
     align-items: center;
@@ -52,9 +67,14 @@ body{
     height: fit-content;
 }
 
-#imagenBotonBuscar{
+#imagenBotonBuscar, #imagenBotonEditar, #imagenBotonEliminar{
     width: 20px;
     height: 20px;
+}
+
+#imagenBotonEditar, #imagenBotonEliminar{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 hr{
@@ -129,6 +149,11 @@ option{
 
 @media screen and (max-width: 1400px) and (max-height: 768px) {
     .contenedorUsuarios{
+        position:absolute;
+        left: 400px;
+    }
+
+    .contenedor{
         position:absolute;
         left: 400px;
     }
