--- a/public/css/usuarios.css
+++ b/public/css/usuarios.css
@@ -109,7 +109,7 @@ option{
     font-size: 15px;
 }
 
-.contenedorCrearUsuarios{
+.contenedorCrearUsuarios, .UsuarioAModificar{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -125,7 +125,7 @@ option{
     
 }
 
-#cerrarContenedorCrear{
+#cerrarContenedorCrear, #cerrarContenedorModificar{
     width: 30px;
     height: 30px;
     position: absolute;
@@ -133,12 +133,12 @@ option{
     top: 20px;
 }
 
-.inputCrearUsuario{
+.inputCrearUsuario, .inputModificarUsuario{
     font-size: 30px;
     width: 140px;
 }
 
-.botonCrearUsuario{
+.botonCrearUsuario, .botonModificarUsuario{
     background: none;
     border: solid 2px #fddfb5;
     border-radius: 5px;
