Funcionamiento de eliminar

--- a/public/css/usuarios.css
+++ b/public/css/usuarios.css
@@ -67,12 +67,15 @@ body{
     height: fit-content;
 }
 
-#imagenBotonBuscar, #imagenBotonEditar, #imagenBotonEliminar{
+#imagenBotonBuscar, 
+#imagenBotonEditar, 
+#imagenBotonEliminar{
     width: 20px;
     height: 20px;
 }
 
-#imagenBotonEditar, #imagenBotonEliminar{
+#imagenBotonEditar, 
+#imagenBotonEliminar{
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -109,7 +112,9 @@ option{
     font-size: 15px;
 }
 
-.contenedorCrearUsuarios, .UsuarioAModificar{
+.contenedorCrearUsuarios, 
+.UsuarioAModificar, 
+.UsuarioAEliminar{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -125,7 +130,9 @@ option{
     
 }
 
-#cerrarContenedorCrear, #cerrarContenedorModificar{
+#cerrarContenedorCrear, 
+#cerrarContenedorModificar,
+#cerrarContenedorEliminar{
     width: 30px;
     height: 30px;
     position: absolute;
@@ -133,12 +140,16 @@ option{
     top: 20px;
 }
 
-.inputCrearUsuario, .inputModificarUsuario{
+.inputCrearUsuario, 
+.inputModificarUsuario,
+.inputEliminarUsuario{
     font-size: 30px;
     width: 140px;
 }
 
-.botonCrearUsuario, .botonModificarUsuario{
+.botonCrearUsuario, 
+.botonModificarUsuario,
+.botonEliminarUsuario{
     background: none;
     border: solid 2px #fddfb5;
     border-radius: 5px;
