--- a/public/css/usuarios.css
+++ b/public/css/usuarios.css
@@ -36,8 +36,8 @@ body{
     top: 50%;
     display: flex;
     flex-direction: column;
-     justify-content: flex-end;
-     align-items: flex-end;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 .opcionesUsuarios{
     display: flex;
@@ -157,6 +157,11 @@ option{
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
 }
+
+#rolDeLaEmpresa {
+    font-size: 15px;
+    padding: 10px;
+  }
 
 @media screen and (max-width: 1400px) and (max-height: 768px) {
     .contenedorUsuarios{
