--- a/public/css/articulos.css
+++ b/public/css/articulos.css
@@ -12,3 +12,128 @@
 body{
     background-image: url(/img/BGArticulos.png);
 }
+
+.contenedorArticulos{
+    width: fit-content;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    scale: 200%;
+    position: absolute;
+    left: 15%;
+    top: 20%;
+}
+
+.opcionesArticulos{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+#crearArticulo{
+    display: inline;
+    background-image: url(/img/iconoAgregar.png);
+    background-size: cover;
+    width: 20px;
+    height: 20px;
+    border: none;
+}
+
+#formularioBuscarArticulo{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+#botonBuscar{
+    background: none;
+    border: none;
+    width: fit-content;
+    height: fit-content;
+}
+
+#imagenBotonBuscar{
+    width: 20px;
+    height: 20px;
+}
+
+hr{
+    border: solid 1px #fddfb5;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
+
+#contenedorFiltroDeBusqueda{
+    display: inline;
+    font-size: 8px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
+
+input{
+    background: none;
+    border: solid 2px #fddfb5;
+    border-radius: 5px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
+
+select{
+    background: none;
+    border: solid 2px #fddfb5;
+    border-radius: 5px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
+
+option{
+    background-color: #760752;
+    font-size: 15px;
+}
+
+.contenedorCrearArticulo{
+    display: none;
+    position: absolute;
+    top: calc(50% - 100px);
+    left: calc(50% - 250px);
+    z-index: 2;
+    background-color: #4a0913;
+    padding: 20px;
+    border: solid 3px #fddfb5;
+    border-radius: 5px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    font-size: 30px;
+}
+
+#cerrarContenedorCrear{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+.inputCrearArticulo{
+    font-size: 30px;
+    width: 140px;
+}
+
+.botonCrearArticulo{
+    background: none;
+    border: solid 2px #fddfb5;
+    border-radius: 5px;
+    font-size: 20px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
+
+@media screen and (max-width: 1400px) and (max-height: 768px) {
+    .contenedorArticulos{
+        position:absolute;
+        left: 400px;
+    }
+
+    .contenedor{
+        position:absolute;
+        left: 400px;
+    }
+}
