--- a/public/css/articulos.css
+++ b/public/css/articulos.css
@@ -52,9 +52,17 @@ body{
     height: fit-content;
 }
 
-#imagenBotonBuscar{
+#imagenBotonBuscar, 
+#imagenBotonEditar, 
+#imagenBotonEliminar{
     width: 20px;
     height: 20px;
+}
+
+#imagenBotonEditar, 
+#imagenBotonEliminar{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 hr{
@@ -89,7 +97,8 @@ option{
     font-size: 15px;
 }
 
-.contenedorCrearArticulo{
+.contenedorCrearArticulo,
+.ArticuloAModificar{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -104,7 +113,8 @@ option{
     font-size: 30px;
 }
 
-#cerrarContenedorCrear{
+#cerrarContenedorCrear,
+#cerrarContenedorModificar{
     width: 30px;
     height: 30px;
     position: absolute;
@@ -112,18 +122,36 @@ option{
     top: 20px;
 }
 
-.inputCrearArticulo{
+.inputCrearArticulo,
+.inputModificarArticulo{
     font-size: 30px;
     width: 140px;
 }
 
-.botonCrearArticulo{
+.botonCrearArticulo,
+.botonModificarArticulo{
     background: none;
     border: solid 2px #fddfb5;
     border-radius: 5px;
     font-size: 20px;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
+
+.contenedor{
+    height: fit-content;
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    scale: 200%;
+    position: absolute;
+    left: 15%;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 @media screen and (max-width: 1400px) and (max-height: 768px) {
