--- a/public/css/modelos.css
+++ b/public/css/modelos.css
@@ -10,10 +10,10 @@
 }
 
 body{
-    background-image: url(/img/BGAlmacenes.png);
+    background-image: url(/img/BGModelos.png);
 }
 
-.contenedorAlmacenes{
+.contenedorModelos{
     width: fit-content;
     background-color: rgba(0, 0, 0, 0.6);
     padding: 10px;
@@ -24,13 +24,13 @@ body{
     top: 20%;
 }
 
-.opcionesAlmacen{
+.opcionesModelos{
     display: flex;
     align-items: center;
     gap: 5px;
 }
 
-#crearAlmacen{
+#crearModelo{
     display: inline;
     background-image: url(/img/iconoAgregar.png);
     background-size: cover;
@@ -39,7 +39,7 @@ body{
     border: none;
 }
 
-#formularioBuscarAlmacenes{
+#formularioBuscarModelos{
     display: flex;
     align-items: center;
     gap: 5px;
@@ -52,17 +52,9 @@ body{
     height: fit-content;
 }
 
-#imagenBotonBuscar, 
-#imagenBotonEditar, 
-#imagenBotonEliminar{
+#imagenBotonBuscar{
     width: 20px;
     height: 20px;
-}
-
-#imagenBotonEditar, 
-#imagenBotonEliminar{
-    margin-top: 10px;
-    margin-bottom: 10px;
 }
 
 hr{
@@ -97,9 +89,7 @@ option{
     font-size: 15px;
 }
 
-.contenedorCrearAlmacenes,
-.AlmacenAModificar,
-.AlmacenAEliminar{
+.contenedorCrearModelos{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -114,9 +104,7 @@ option{
     font-size: 30px;
 }
 
-#cerrarContenedorCrear,
-#cerrarContenedorModificar,
-#cerrarContenedorEliminar{
+#cerrarContenedorCrear{
     width: 30px;
     height: 30px;
     position: absolute;
@@ -124,16 +112,12 @@ option{
     top: 20px;
 }
 
-.inputCrearAlmacen,
-.inputModificarAlmacen,
-.inputEliminarAlmacen{
+.inputCrearModelo{
     font-size: 30px;
     width: 140px;
 }
 
-.botonCrearAlmacen,
-.botonModificarAlmacen,
-.botonEliminarAlmacen{
+.botonCrearModelo{
     background: none;
     border: solid 2px #fddfb5;
     border-radius: 5px;
@@ -142,24 +126,8 @@ option{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
 }
 
-.contenedor{
-    height: fit-content;
-    width: 420px;
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
-    scale: 200%;
-    position: absolute;
-    left: 15%;
-    top: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
 @media screen and (max-width: 1400px) and (max-height: 768px) {
-    .contenedorAlmacenes{
+    .contenedorModelos{
         position:absolute;
         left: 400px;
     }
