--- a/public/css/modelos.css
+++ b/public/css/modelos.css
@@ -98,7 +98,8 @@ option{
 }
 
 .contenedorCrearModelos,
-.ModeloAModificar{
+.ModeloAModificar,
+.ModeloAEliminar{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -114,7 +115,8 @@ option{
 }
 
 #cerrarContenedorCrear,
-#cerrarContenedorModificar{
+#cerrarContenedorModificar,
+#cerrarContenedorEliminar{
     width: 30px;
     height: 30px;
     position: absolute;
@@ -123,13 +125,15 @@ option{
 }
 
 .inputCrearModelo,
-.inputModificarModelo{
+.inputModificarModelo,
+.inputEliminarModelo{
     font-size: 30px;
     width: 140px;
 }
 
 .botonCrearModelo,
-.botonModificarModelo{
+.botonModificarModelo,
+.botonEliminarModelo{
     background: none;
     border: solid 2px #fddfb5;
     border-radius: 5px;
