--- a/public/css/modelos.css
+++ b/public/css/modelos.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 #ajusteBrillo{
     display: none;
     position: fixed;
@@ -144,7 +146,7 @@ option{
 
 .contenedor{
     height: fit-content;
-    width: 413px;
+    width: 394px;
     background-color: rgba(0, 0, 0, 0.6);
     padding: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
