--- a/public/css/vehiculos.css
+++ b/public/css/vehiculos.css
@@ -91,6 +91,43 @@ option{
     font-size: 15px;
 }
 
+.contenedorCrearVehiculos{
+    display: none;
+    position: absolute;
+    top: calc(50% - 100px);
+    left: calc(50% - 250px);
+    z-index: 2;
+    background-color: #4a0913;
+    padding: 20px;
+    border: solid 3px #fddfb5;
+    border-radius: 5px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    font-size: 30px;
+}
+
+#cerrarContenedorCrear{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+.inputCrearVehiculo{
+    font-size: 30px;
+    width: 140px;
+}
+
+.botonCrearVehiculo{
+    background: none;
+    border: solid 2px #fddfb5;
+    border-radius: 5px;
+    font-size: 20px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
+
 @media screen and (max-width: 1400px) and (max-height: 768px) {
     .contenedorVehiculos{
         position:absolute;
