--- a/public/css/vehiculos.css
+++ b/public/css/vehiculos.css
@@ -54,9 +54,17 @@ body{
     height: fit-content;
 }
 
-#imagenBotonBuscar{
+#imagenBotonBuscar, 
+#imagenBotonEditar, 
+#imagenBotonEliminar{
     width: 20px;
     height: 20px;
+}
+
+#imagenBotonEditar, 
+#imagenBotonEliminar{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 hr{
@@ -91,7 +99,8 @@ option{
     font-size: 15px;
 }
 
-.contenedorCrearVehiculos{
+.contenedorCrearVehiculos,
+.VehiculoAModificar{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -106,7 +115,8 @@ option{
     font-size: 30px;
 }
 
-#cerrarContenedorCrear{
+#cerrarContenedorCrear,
+#cerrarContenedorModificar{
     width: 30px;
     height: 30px;
     position: absolute;
@@ -114,18 +124,36 @@ option{
     top: 20px;
 }
 
-.inputCrearVehiculo{
+.inputCrearVehiculo,
+.inputModificarVehiculo{
     font-size: 30px;
     width: 140px;
 }
 
-.botonCrearVehiculo{
+.botonCrearVehiculo,
+.botonModificarVehiculo{
     background: none;
     border: solid 2px #fddfb5;
     border-radius: 5px;
     font-size: 20px;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
+
+.contenedor{
+    height: fit-content;
+    width: 419px;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    scale: 200%;
+    position: absolute;
+    left: 15%;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 @media screen and (max-width: 1400px) and (max-height: 768px) {
