--- a/public/css/vehiculos.css
+++ b/public/css/vehiculos.css
@@ -56,13 +56,17 @@ body{
 
 #imagenBotonBuscar, 
 #imagenBotonEditar, 
-#imagenBotonEliminar{
+#imagenBotonEliminar,
+#imagenBotonAsignar,
+#imagenBotonRelegar{
     width: 20px;
     height: 20px;
 }
 
 #imagenBotonEditar, 
-#imagenBotonEliminar{
+#imagenBotonEliminar,
+#imagenBotonAsignar,
+#imagenBotonRelegar{
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -100,8 +104,10 @@ option{
 }
 
 .contenedorCrearVehiculos,
-.VehiculoAModificar,
-.VehiculoAEliminar{
+.vehiculoAModificar,
+.vehiculoAEliminar,
+.asignarChofer,
+.relegarChofer{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -118,7 +124,9 @@ option{
 
 #cerrarContenedorCrear,
 #cerrarContenedorModificar,
-#cerrarContenedorEliminar{
+#cerrarContenedorEliminar,
+#cerrarContenedorAsignar,
+#cerrarContenedorRelegar{
     width: 30px;
     height: 30px;
     position: absolute;
@@ -128,14 +136,18 @@ option{
 
 .inputCrearVehiculo,
 .inputModificarVehiculo,
-.inputEliminarVehiculo{
+.inputEliminarVehiculo,
+.inputAsignarChofer,
+.inputRelegarChofer{
     font-size: 30px;
     width: 140px;
 }
 
 .botonCrearVehiculo,
 .botonModificarVehiculo,
-.botonEliminarVehiculo{
+.botonEliminarVehiculo,
+.botonAsignarChofer,
+.botonRelegarChofer{
     background: none;
     border: solid 2px #fddfb5;
     border-radius: 5px;
@@ -146,14 +158,14 @@ option{
 
 .contenedor{
     height: fit-content;
-    width: 419px;
+    width: 437px;
     background-color: rgba(0, 0, 0, 0.6);
     padding: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     scale: 200%;
     position: absolute;
     left: 15%;
-    top: 50%;
+    top: 55%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
