--- a/public/css/turnos.css
+++ b/public/css/turnos.css
@@ -3,3 +3,80 @@
 body{
     background-image: url(/img/BGTurno.png);
 }
+
+#ajusteBrillo{
+    display: none;
+    position: fixed;
+    left: 0%;
+    top: 0%;
+    opacity: 70%;
+    z-index: 1;
+    width: 100%;
+    
+}
+
+.contenedor{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.botones{
+    background-color: #4a0913;
+    border: solid 3px #fddfb5;
+    border-radius: 5px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    width: 300px;
+    height: 80px;
+    cursor: pointer;
+}
+
+.botonTurno{
+    width: 50px;
+    height: 50px;
+}
+
+.contenedorCrearTurnos{
+    display: none;
+    position: absolute;
+    top: calc(50% - 100px);
+    left: calc(50% - 250px);
+    z-index: 2;
+    background-color: #4a0913;
+    padding: 20px;
+    border: solid 3px #fddfb5;
+    border-radius: 5px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    font-size: 30px;
+}
+
+#cerrarContenedorCrear{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+.inputCrearTurno{
+    font-size: 30px;
+    width: 140px;
+    background: none;
+    border: solid 2px #fddfb5;
+    border-radius: 5px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+}
+
+.botonCrearTurno{
+    background: none;
+    border: solid 2px #fddfb5;
+    border-radius: 5px;
+    font-size: 20px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
