--- a/public/css/appBackOffice.css
+++ b/public/css/appBackOffice.css
@@ -3,7 +3,7 @@
 .contenedorAccesoAListas{
     position: absolute;
     width: calc(100% - 500px);
-    height: 55%;
+    height: 68%;
     top: 15%;
     left: 50%;
     padding: 30px;
@@ -24,13 +24,13 @@
     padding: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
     width: 400px;
-    height: fit-content;
+    height: 45px;
     display: flex;
     text-align: right;
     align-items: center;
     margin-top: 20px;
     position: relative;
-    top: -15px;
+    top: -30px;
     justify-content: right;
   }
 
@@ -40,7 +40,7 @@
     background-color: rgba(0, 0, 0, 0.6);
     font-size: 25px;
     font-family: 'Roboto', sans-serif;
-    bottom: 0%;
+    bottom: 0;
     left: 0%;
     display: flex;
     justify-content: right;
