--- a/public/css/articulos.css
+++ b/public/css/articulos.css
@@ -12,7 +12,7 @@
 }
 
 body{
-    background-image: url(/img/BGArticulos.png);
+    background-image: url(/img/BGArticuloListado.png);
 }
 
 .contenedorArticulos{
