Traduccion de Lista Articulo

--- a/public/css/listadoArticulo.css
+++ b/public/css/listadoArticulo.css
@@ -66,7 +66,12 @@
     gap: 5px;
 }
 
-#labelAOrdenar{
+#listaArticulo,
+#listaTipoArticulo{
     position: absolute;
     left: 20px;
+}
+
+label{
+    font-weight: bold;
 }
