--- a/public/css/listadoVehiculo.css
+++ b/public/css/listadoVehiculo.css
@@ -66,7 +66,12 @@
     gap: 5px;
 }
 
-#labelAOrdenar{
+#vehiculos,
+#modelos{
     position: absolute;
     left: 20px;
+}
+
+label{
+    font-weight: bold;
 }
