--- a/public/css/turnos.css
+++ b/public/css/turnos.css
@@ -83,3 +83,7 @@ body{
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
 }
+
+label{
+    font-weight: bold;
+}
