--- a/public/css/vehiculos.css
+++ b/public/css/vehiculos.css
@@ -172,6 +172,10 @@ option{
     align-items: flex-end;
 }
 
+label{
+    font-weight: bold;
+}
+
 @media screen and (max-width: 1400px) and (max-height: 768px) {
     .contenedorVehiculos{
         position:absolute;
