--- a/public/css/usuarios.css
+++ b/public/css/usuarios.css
@@ -8,7 +8,7 @@
     opacity: 70%;
     z-index: 1;
     width: 100%;
-    
+    height: 100%;
 }
 
 body{
@@ -171,58 +171,109 @@ label{
 
 @media screen and (max-width: 1400px) and (max-height: 768px) {
     .contenedorUsuarios{
+        left: 29.5%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .contenedorUsuarios{
         position:absolute;
-        left: 400px;
+        left: 26%;
+        width: 46%;
+    }
+
+    #contenedorFiltroDeBusqueda{
+        font-size: 8px;
+    }
+
+    select{
+        position: relative;
+        font-size: 10px;
+        top:5%;
+    }
+
+    input{
+        position: static;
+        width: 35%;
+        font-size: 10px;
+        margin-top:3%;
     }
 
     .contenedor{
-        position:absolute;
-        left: 400px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .contenedorAccesoAListas {
-        width: 75%;
-        top: 16%;
+        width: 46%;
+        left: 26%;
     }
 
-    .botonListado{
-      font-size: 5vw;
-      width: 85%;
-      max-width: none;
-      top: -5%;
-    }
-
-    .footerBackOffice {
-      font-size: 3vw;
-      padding: 0.5% 0.5% 0.5% 0.5%;
-}
-.iconoBotonListado{
-  width: 40px;
-  height: 40px;
-}
-
-#imagenUbicacionBackOffice{
-  width: 25px;
-  height: 25px;
-}
-}
-
-@media screen and (min-width: 1115px) {
-    .contenedorUsuarios{
-        left: 25%;
-        width: 48%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .contenedorUsuarios{
-        width: 45%;
-        padding: 10px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
-        scale: 200%;
+    .contenedorCrearUsuarios{
         position: absolute;
-        left: 25%;
+        top: 15%;
+        right: 45%;
+        width: 65%;
+    }
+
+    label{
+        font-size: 20px;
+    }
+
+    #filtroBusqueda{
+        font-size: 8px;
+    }
+    
+    .inputCrearUsuario{
+        width: 20%;
+    }
+
+    .UsuarioAModificar{
+        position: absolute;
+        top:15%;
+    }
+
+}
+
+@media screen and (max-width: 320px){
+
+    #botonBuscar{
+        top:40%;
+    }
+
+    #filtroDeLista{
+        margin-top: 45%;
+        height: 5%;
+        width: 100%;
+        font-size: 8px;
+    }
+
+    #filtroBusqueda{
+        position: absolute;
+        top: 40%;
+    }
+
+    input{
+        position:absolute;
+        top: 10%;
+        width: 50%;
+    }
+
+    #botonBuscar{
+        position: absolute;
+        left: 78%;
+        top: 33%;
+    }
+
+    .contenedor{
+        top: 55%;
+    }
+
+    .contenedorCrearUsuarios, .UsuarioAModificar, .UsuarioAEliminar{
+        position: absolute;
+        top: 10%;
+        left: 6%;
+        width: 75%;
+    }
+
+    .inputCrearUsuario, .inputModificarUsuario, .inputEliminarUsuario{
+        flex-direction: column;
+        position: relative;
+        width: 60%;
     }
 }
