--- a/public/css/almacenes.css
+++ b/public/css/almacenes.css
@@ -8,7 +8,7 @@
     opacity: 70%;
     z-index: 1;
     width: 100%;
-    
+    height: 100%;
 }
 
 body{
@@ -22,7 +22,7 @@ body{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     scale: 200%;
     position: absolute;
-    left: 15%;
+    left: 35%;
     top: 20%;
 }
 
@@ -100,8 +100,8 @@ option{
 }
 
 .contenedorCrearAlmacenes,
-.AlmacenAModificar,
-.AlmacenAEliminar{
+.almacenAModificar,
+.almacenAEliminar{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -152,7 +152,7 @@ option{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     scale: 200%;
     position: absolute;
-    left: 15%;
+    left: 35%;
     top: 50%;
     display: flex;
     flex-direction: column;
@@ -164,14 +164,107 @@ label{
     font-weight: bold;
 }
 
-@media screen and (max-width: 1400px) and (max-height: 768px) {
+@media screen and (min-width: 1367px) {
     .contenedorAlmacenes{
-        position:absolute;
-        left: 400px;
+        position:relative;
+        margin-top: 18%;
+        left: 26%;
+        width: 46%;
     }
 
     .contenedor{
         position:absolute;
         left: 400px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .contenedorAlmacenes{
+        position:absolute;
+        left: 26%;
+        width: 46%;
+    }
+
+    #contenedorFiltroDeBusqueda{
+        font-size: 8px;
+    }
+
+    select{
+        position: relative;
+        font-size: 10px;
+    }
+
+    input{
+        position: static;
+        width: 35%;
+        font-size: 10px;
+    }
+
+    .contenedor{
+        width: 46%;
+        left: 26%;
+    }
+
+    label{
+        font-size: 20px;
+    }
+
+    #filtroBusqueda{
+        font-size: 7px;
+    }
+
+}
+
+@media screen and (max-width: 320px){
+
+    .contenedorAlmacenes{
+        position: absolute;
+        top: 21%;
+    }
+
+    #botonBuscar{
+        top:40%;
+    }
+
+    #filtroDeLista{
+        margin-top: 45%;
+        height: 5%;
+        width: 100%;
+        font-size: 8px;
+    }
+
+    #filtroBusqueda{
+        position: absolute;
+        top: 40%;
+        font-size: 7px;
+    }
+
+    input{
+        position:absolute;
+        top: 10%;
+        width: 50%;
+    }
+
+    #botonBuscar{
+        position: absolute;
+        left: 78%;
+        top: 33%;
+    }
+
+    .contenedor{
+        top: 55%;
+    }
+
+    .contenedorCrearAlmacenes, .almacenAModificar, .almacenAEliminar{
+        position: absolute;
+        top: 10%;
+        left: 6%;
+        width: 75%;
+    }
+
+    .inputCrearAlmacen, .inputModificarAlmacen, .inputEliminarAlmacen{
+        flex-direction: column;
+        position: relative;
+        width: 60%;
     }
 }
