--- a/public/css/articulos.css
+++ b/public/css/articulos.css
@@ -8,7 +8,7 @@
     opacity: 70%;
     z-index: 1;
     width: 100%;
-    
+    height: 100%;
 }
 
 body{
@@ -100,8 +100,8 @@ option{
 }
 
 .contenedorCrearArticulo,
-.ArticuloAModificar,
-.ArticuloAEliminar{
+.articuloAModificar,
+.articuloAEliminar{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -173,5 +173,107 @@ label{
     .contenedor{
         position:absolute;
         left: 400px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .contenedorArticulos{
+        position:absolute;
+        left: 26.5%;
+    }
+
+    #botonBuscar{
+        position: static;
+        left: 10%;
+        width: 1%;
+    }
+
+    #contenedorFiltroDeBusqueda{
+        font-size: 8px;
+    }
+
+    select{
+        position: relative;
+        font-size: 10px;
+    }
+
+    input{
+        position: static;
+        width: 35%;
+        font-size: 10px;
+    }
+
+    .contenedor{
+        width: 46%;
+        left: 26%;
+    }
+
+    label{
+        font-size: 20px;
+    }
+
+    #filtroBusqueda{
+        font-size: 8px;
+    }
+
+
+}
+
+@media screen and (max-width: 320px){
+
+    .contenedorArticulos{
+        position: absolute;
+        top: 21%;
+        width: 46.5%;
+    }
+
+    #botonBuscar{
+        top:40%;
+    }
+
+    #filtroDeLista{
+        margin-top: 45%;
+        height: 5%;
+        width: 100%;
+        font-size: 8px;
+    }
+
+    #filtroBusqueda{
+        position: absolute;
+        top: 35%;
+        font-size: 7px;
+    }
+
+    input{
+        position:absolute;
+        top: 10%;
+        width: 50%;
+    }
+
+    #botonBuscar{
+        position: absolute;
+        left: 78%;
+        top: 33%;
+    }
+
+    .contenedor{
+        top: 55%;
+    }
+
+    .contenedorCrearArticulo, 
+    .articuloAModificar, 
+    .articuloAEliminar{
+        position: absolute;
+        top: 10%;
+        left: 6%;
+        width: 75%;
+    }
+
+    .inputCrearArticulo, 
+    .inputModificarArticulo, 
+    .inputEliminarArticulo{
+        flex-direction: column;
+        position: relative;
+        width: 60%;
     }
 }
