--- a/public/css/listadoArticulo.css
+++ b/public/css/listadoArticulo.css
@@ -56,7 +56,7 @@
     width: 50px;
     height: 50px;
 }
-  
+
 
 #contenedorUbicacionBackOffice{
     position: absolute;
@@ -74,4 +74,55 @@
 
 label{
     font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+    .contenedorAccesoAListas {
+        width: 75%;
+        top: 16%;
+    }
+
+    .botonListado{
+    font-size: 5vw;
+    width: 85%;
+    max-width: none;
+    top: -5%;
+    }
+
+    .footerBackOffice {
+    font-size: 3vw;
+    padding: 0.5% 0.5% 0.5% 0.5%;
+}
+.iconoBotonListado{
+width: 40px;
+height: 40px;
+}
+
+#imagenUbicacionBackOffice{
+width: 25px;
+height: 25px;
+}
+}
+
+@media screen and (min-width: 1367px) {
+.contenedorAccesoAListas {
+    width: 70%;
+    max-width: 1400px;
+    height: 60vh;
+    padding: 2%;
+}
+
+.botonListado {
+    font-size: 2.5vw; 
+    padding: 1.5vw; 
+    width: 60%; 
+    max-width: 500px; 
+}
+}
+
+@media screen and (min-width: 769px) {
+.contenedorAccesoAListas {
+    width: 75%;
+    top: 16%;
+}
 }
