--- a/public/css/modelos.css
+++ b/public/css/modelos.css
@@ -8,7 +8,7 @@
     opacity: 70%;
     z-index: 1;
     width: 100%;
-    
+    height: 100%;
 }
 
 body{
@@ -100,8 +100,8 @@ option{
 }
 
 .contenedorCrearModelos,
-.ModeloAModificar,
-.ModeloAEliminar{
+.modeloAModificar,
+.modeloAEliminar{
     display: none;
     position: absolute;
     top: calc(50% - 100px);
@@ -173,5 +173,122 @@ label{
     .contenedor{
         position:absolute;
         left: 400px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .contenedorModelos{
+        position:absolute;
+        left: 27%;
+        width:42%;
+    }
+
+    #botonBuscar{
+        position: absolute;
+        margin-top:1%;
+    }
+
+    #contenedorFiltroDeBusqueda{
+        font-size: 8px;
+    }
+
+    select{
+        position: relative;
+        font-size: 10px;
+    }
+
+    input{
+        position: static;
+        width: 35%;
+        font-size: 10px;
+    }
+
+    .contenedor{
+        width: 46%;
+        left: 25.5%;
+    }
+
+    .contenedorCrearVehiculos{
+        position: absolute;
+        top: 15%;
+        right: 45%;
+        width: 65%;
+    }
+
+    label{
+        font-size: 20px;
+    }
+
+    #filtroBusqueda{
+        font-size: 8px;
+    }
+    
+    .inputCrearUsuario{
+        width: 20%;
+    }
+
+    .vehiculoAModificar{
+        position: absolute;
+        top:15%;
+    }
+
+}
+
+@media screen and (max-width: 320px){
+
+    .contenedorVehiculos{
+        position: absolute;
+        top: 21%;
+        width: 100%;
+    }
+
+    #botonBuscar{
+        top:40%;
+    }
+
+    #filtroDeLista{
+        margin-top: 47%;
+        height: 5%;
+        width: 100%;
+        font-size: 8px;
+    }
+
+    #filtroBusqueda{
+        position: absolute;
+        top: 36%;
+        font-size: 7px;
+    }
+
+    input{
+        position:absolute;
+        top: 10%;
+        width: 50%;
+    }
+
+    #botonBuscar{
+        position: absolute;
+        left: 78%;
+        top: 33%;
+    }
+
+    .contenedor{
+        top: 60%;
+    }
+
+    .contenedorCrearModelos, 
+    .modeloAModificar, 
+    .modeloAEliminar{
+        position: absolute;
+        top: 10%;
+        left: 6%;
+        width: 75%;
+    }
+
+    .inputCrearModelo, 
+    .inputModificarModelo, 
+    .inputEliminarModelo{
+        flex-direction: column;
+        position: relative;
+        width: 60%;
     }
 }
