--- a/public/css/usuarios.css
+++ b/public/css/usuarios.css
@@ -34,7 +34,7 @@ body{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     scale: 200%;
     position: absolute;
-    left: 15%;
+    left: 29.5%;
     top: 50%;
     display: flex;
     flex-direction: column;
@@ -116,11 +116,11 @@ option{
 }
 
 .contenedorCrearUsuarios, 
-.UsuarioAModificar, 
-.UsuarioAEliminar{
+.usuarioAModificar, 
+.usuarioAEliminar{
     display: none;
     position: absolute;
-    top: calc(50% - 100px);
+    top: 20%;
     left: calc(50% - 250px);
     z-index: 2;
     background-color: #4a0913;
@@ -223,7 +223,7 @@ label{
         width: 20%;
     }
 
-    .UsuarioAModificar{
+    .usuarioAModificar{
         position: absolute;
         top:15%;
     }
@@ -264,7 +264,7 @@ label{
         top: 55%;
     }
 
-    .contenedorCrearUsuarios, .UsuarioAModificar, .UsuarioAEliminar{
+    .contenedorCrearUsuarios, .usuarioAModificar, .usuarioAEliminar{
         position: absolute;
         top: 10%;
         left: 6%;
